# multi-uav-sar-system

./: .gitignore  README.md
navigation/: setup.py
navigation/navigation/: path_executor.py
scripts/: build.sh  cleanup.sh  run.sh  run_sim.sh
sim/models/x3_lidar/: model.config  model.sdf
sim/worlds/: quadcopter.sdf  quadcopter_corridor.sdf  quadcopter_demo_world.sdf  quadcopter_easy_world1.sdf  quadcopter_easy_world2.sdf  quadcopter_easy_world3.sdf  quadcopter_hard_world1.sdf  quadcopter_hard_world2.sdf  quadcopter_hard_world3.sdf  quadcopter_mediumObstacles.sdf  quadcopter_medium_world1.sdf  quadcopter_medium_world2.sdf  quadcopter_medium_world3.sdf  quadcopter_waypoint_test.sdf
src/human_detection/: package.xml  setup.py
src/human_detection/human_detection/: detection_node.py  verification_node.py
src/human_detection/test/: test_nodes.py
src/mission_manager/: package.xml  setup.cfg  setup.py
src/mission_manager/mission_manager/: mission_manager.py
src/mission_manager/test/: test_nodes.py
src/navigation/: package.xml  setup.py
src/navigation/navigation/: astar_navigation_node.py  map_debug.py  path_executor.py  world_model.py
src/navigation/test/: test_nodes.py
src/sar_msgs/: CMakeLists.txt  package.xml
src/sar_msgs/msg/: Alert.msg  DetectionEvent.msg  DriverHealth.msg  FSMEvent.msg  MissionCoverage.msg  UAVCoverage.msg  UAVState.msg
src/sar_msgs/srv/: GetOccupancyGrid.srv
src/sar_system/: package.xml  setup.cfg  setup.py
src/sar_system/config/: params.yaml
src/scripts/: build.sh  run_sim.sh
src/swarm_coordination/: package.xml  setup.py
src/uav_platform/: package.xml  setup.cfg  setup.py
src/uav_platform/config/: platform.yaml
src/uav_platform/test/: test_nodes.py
src/uav_platform/uav_platform/: gazebo_driver.py  platform_interface.py  sim_platform.py
src/uav_platform/uav_platform/config/: platform.yaml
(+4 files in other folders)
